Fix overflow and styling across document and layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,20 +17,31 @@
   --tw-color-primary-700: 3 105 161;
   --tw-color-primary-800: 7 89 133;
   --tw-color-primary-900: 12 74 110;
-  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f0f9ff */
-  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #e0f2fe */
-  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #bae6fd */
-  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #7dd3fc */
-  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #38bdf8 */
-  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #0ea5e9 */
-  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #0284c7 */
-  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #0369a1 */
-  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #075985 */
-  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #0c4a6e */
+  --color-primary-50: rgb(var(--tw-color-primary-50));
+  /* #f0f9ff */
+  --color-primary-100: rgb(var(--tw-color-primary-100));
+  /* #e0f2fe */
+  --color-primary-200: rgb(var(--tw-color-primary-200));
+  /* #bae6fd */
+  --color-primary-300: rgb(var(--tw-color-primary-300));
+  /* #7dd3fc */
+  --color-primary-400: rgb(var(--tw-color-primary-400));
+  /* #38bdf8 */
+  --color-primary-500: rgb(var(--tw-color-primary-500));
+  /* #0ea5e9 */
+  --color-primary-600: rgb(var(--tw-color-primary-600));
+  /* #0284c7 */
+  --color-primary-700: rgb(var(--tw-color-primary-700));
+  /* #0369a1 */
+  --color-primary-800: rgb(var(--tw-color-primary-800));
+  /* #075985 */
+  --color-primary-900: rgb(var(--tw-color-primary-900));
+  /* #0c4a6e */
   /* #endregion  /**======== Primary Color =========== */
 }
 
 @layer base {
+
   /* inter var - latin */
   @font-face {
     font-family: 'Inter';
@@ -76,6 +87,7 @@
   .p {
     @apply font-primary text-sm md:text-base;
   }
+
   /* #endregion  /**======== Typography =========== */
 
   .layout {
@@ -97,15 +109,14 @@
 @layer utilities {
   .animated-underline {
     background-image: linear-gradient(#33333300, #33333300),
-      linear-gradient(
-        to right,
+      linear-gradient(to right,
         var(--color-primary-400),
-        var(--color-primary-500)
-      );
+        var(--color-primary-500));
     background-size: 100% 2px, 0 2px;
     background-position: 100% 100%, 0 100%;
     background-repeat: no-repeat;
   }
+
   @media (prefers-reduced-motion: no-preference) {
     .animated-underline {
       transition: 0.3s ease;
@@ -113,6 +124,7 @@
         border-color;
     }
   }
+
   .animated-underline:hover,
   .animated-underline:focus-visible {
     background-size: 0 2px, 100% 2px;
@@ -121,16 +133,18 @@
   .animation-delay-2000 {
     animation-delay: 2s;
   }
+
   .animation-delay-4000 {
     animation-delay: 4s;
   }
 }
 
-
-
 body {
   /* font-family: 'Lato', monospace; */
   background-color: #020826;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 footer a:hover {
@@ -187,6 +201,7 @@ footer a:hover {
   position: absolute;
   left: 50%;
 }
+
 .icon-scroll {
   width: 30px;
   height: 50px;
@@ -196,6 +211,7 @@ footer a:hover {
   box-shadow: inset 0 0 0 1px #fff;
   border-radius: 25px;
 }
+
 .icon-scroll:before {
   content: '';
   width: 6px;
@@ -205,25 +221,29 @@ footer a:hover {
   top: 8px;
   border-radius: 4px;
   -webkit-animation-duration: 1.5s;
-          animation-duration: 1.5s;
+  animation-duration: 1.5s;
   -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
   -webkit-animation-name: scroll;
-          animation-name: scroll;
+  animation-name: scroll;
 }
+
 @-webkit-keyframes scroll {
   0% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
     transform: translateY(46px);
   }
 }
+
 @keyframes scroll {
   0% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
     transform: translateY(46px);
@@ -242,7 +262,7 @@ footer a:hover {
   overflow: hidden;
 }
 
-.box::before { 
+.box::before {
   content: '';
   position: absolute;
   width: 700px;
@@ -251,7 +271,7 @@ footer a:hover {
   animation: animate 8s linear infinite;
 }
 
-.box::after { 
+.box::after {
   content: '';
   position: absolute;
   width: 700px;
@@ -261,14 +281,12 @@ footer a:hover {
   animation-delay: -4s;
 }
 
-@keyframes animate 
-{
-  0%
-  {
+@keyframes animate {
+  0% {
     transform: rotate(0deg);
   }
-  100%
-  {
+
+  100% {
     transform: rotate(360deg);
   }
 }
@@ -287,32 +305,34 @@ footer a:hover {
   border-radius: 17px;
 }
 
-.load-wraper{
+.load-wraper {
   position: relative;
   height: 100%;
   width: 100%;
-  background-color: rgb(211,211,211);
+  background-color: rgb(211, 211, 211);
   z-index: 44;
   overflow: hidden;
   border-radius: 5px;
 }
-.activity{
+
+.activity {
   position: absolute;
   left: -45%;
   height: 100%;
   width: 45%;
-  background-image: linear-gradient(to left, rgba(251,251,251, .05), rgba(251,251,251, .3), rgba(251,251,251, .6), rgba(251,251,251, .3), rgba(251,251,251, .05));
-  background-image: -moz-linear-gradient(to left, rgba(251,251,251, .05), rgba(251,251,251, .3), rgba(251,251,251, .6), rgba(251,251,251, .3), rgba(251,251,251, .05));
-  background-image: -webkit-linear-gradient(to left, rgba(251,251,251, .05), rgba(251,251,251, .3), rgba(251,251,251, .6), rgba(251,251,251, .3), rgba(251,251,251, .05));
+  background-image: linear-gradient(to left, rgba(251, 251, 251, .05), rgba(251, 251, 251, .3), rgba(251, 251, 251, .6), rgba(251, 251, 251, .3), rgba(251, 251, 251, .05));
+  background-image: -moz-linear-gradient(to left, rgba(251, 251, 251, .05), rgba(251, 251, 251, .3), rgba(251, 251, 251, .6), rgba(251, 251, 251, .3), rgba(251, 251, 251, .05));
+  background-image: -webkit-linear-gradient(to left, rgba(251, 251, 251, .05), rgba(251, 251, 251, .3), rgba(251, 251, 251, .6), rgba(251, 251, 251, .3), rgba(251, 251, 251, .05));
   animation: loading 1s infinite;
   z-index: 45;
 }
 
 @keyframes loading {
-  0%{
+  0% {
     left: -45%;
   }
-  100%{
+
+  100% {
     left: 100%;
   }
 }
@@ -321,7 +341,8 @@ footer a:hover {
   max-width: 260px !important;
 }
 
-.tippy-tooltip, .tippy-tooltip [x-circle] {
+.tippy-tooltip,
+.tippy-tooltip [x-circle] {
   background-color: #f6f6f6 !important;
 }
 
@@ -359,6 +380,7 @@ footer a:hover {
 .faq {
   margin: 3rem 0;
 }
+
 .question-wrapper {
   border-bottom: 1px solid $details;
   margin: 0 auto;
@@ -404,6 +426,7 @@ button:focus {
     opacity: 0.3;
     transform: translateY(-20%);
   }
+
   to {
     opacity: 1;
     transform: translateY(0%);
@@ -430,17 +453,24 @@ button:focus {
 }
 
 @keyframes animate-shine {
-  0% { 
-      opacity: 0;
-      width: 0; }
-  16.66667% { 
-      opacity: .3; }
-  33.33333% { 
-      opacity: 0;
-      width: 95%; }
-  100% { 
-      opacity: 0;
-      width: 95%; }
+  0% {
+    opacity: 0;
+    width: 0;
+  }
+
+  16.66667% {
+    opacity: .3;
+  }
+
+  33.33333% {
+    opacity: 0;
+    width: 95%;
+  }
+
+  100% {
+    opacity: 0;
+    width: 95%;
+  }
 }
 
 
@@ -448,15 +478,15 @@ button:focus {
 
 @keyframes playPulse {
   0% {
-      transform: scaleY(.25)
+    transform: scaleY(.25)
   }
 
   50% {
-      transform: scaleY(.5)
+    transform: scaleY(.5)
   }
 
   to {
-      transform: scaleY(1)
+    transform: scaleY(1)
   }
 }
 
